--- a/Apps/package.json
+++ b/Apps/package.json
@@ -3,13 +3,13 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "babylonjs": "5.0.0-alpha.65",
-    "babylonjs-gui": "5.0.0-alpha.65",
-    "babylonjs-loaders": "5.0.0-alpha.65",
-    "babylonjs-materials": "5.0.0-alpha.65",
-    "jsc-android": "^241213.1.0",
-    "v8-android": "^7.8.2",
+    "babylonjs": "5.0.0-rc.1",
+    "babylonjs-gui": "5.0.0-rc.1",
+    "babylonjs-loaders": "5.0.0-rc.1",
+    "babylonjs-materials": "5.0.0-rc.1",
     "chai": "^4.3.4",
-    "mocha": "^9.1.1"
+    "jsc-android": "^241213.1.0",
+    "mocha": "^9.1.1",
+    "v8-android": "^7.8.2"
   }
 }
