--- a/Plugins/ExternalTexture/CMakeLists.txt
+++ b/Plugins/ExternalTexture/CMakeLists.txt
@@ -34,5 +34,5 @@ target_compile_definitions(ExternalTexture
     PRIVATE NOMINMAX
     PRIVATE ${GRAPHICS_API_UPPER})
 
-set_property(TARGET ExternalTexture PROPERTY FOLDER Core)
+set_property(TARGET ExternalTexture PROPERTY FOLDER Plugins)
 source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES})
