--- a/Core/CMakeLists.txt
+++ b/Core/CMakeLists.txt
@@ -1,4 +1,10 @@
 add_subdirectory(JsRuntime)
-add_subdirectory(AppRuntime)
-add_subdirectory(ScriptLoader)
 add_subdirectory(Graphics)
+
+if(BABYLON_NATIVE_CORE_APPRUNTIME)
+    add_subdirectory(AppRuntime)
+endif()
+
+if(BABYLON_NATIVE_CORE_SCRIPTLOADER)
+    add_subdirectory(ScriptLoader)
+endif()
