--- a/Plugins/CMakeLists.txt
+++ b/Plugins/CMakeLists.txt
@@ -34,6 +34,6 @@ if(BABYLON_NATIVE_PLUGIN_TESTUTILS)
     add_subdirectory(TestUtils)
 endif()
 
-if(BABYLON_NATIVE_PLUGIN_XR)
+if(BABYLON_NATIVE_PLUGIN_NATIVEXR AND (WIN32 OR ANDROID OR IOS))
     add_subdirectory(NativeXr)
 endif()
