--- a/Polyfills/Canvas/CMakeLists.txt
+++ b/Polyfills/Canvas/CMakeLists.txt
@@ -19,6 +19,9 @@ file(GLOB FONT_SOURCES ${BGFX_DIR}/examples/common/font/*.cpp)
 file(GLOB NANOVG_SOURCES ${BGFX_DIR}/examples/common/nanovg/nanovg.cpp)
 set(ATLAS_SOURCES ${BGFX_DIR}/examples/common/cube_atlas.cpp)
 
+if (ENABLE_UNITY_BUILD)
+    enable_unity_build(Canvas SOURCES)
+endif()
 add_library(Canvas ${SOURCES} ${FONT_SOURCES} ${ATLAS_SOURCES} ${NANOVG_SOURCES})
 
 target_include_directories(Canvas PUBLIC "Include"
@@ -37,8 +40,12 @@ target_link_to_dependencies(Canvas
     PRIVATE napi_extensions)
 
 set_property(TARGET Canvas PROPERTY FOLDER Polyfills)
-source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES})
-source_group("3rd party Sources" ${CMAKE_CURRENT_SOURCE_DIR} FILES ${FONT_SOURCES} ${NANOVG_SOURCES} ${ATLAS_SOURCES})
+
+if (NOT ENABLE_UNITY_BUILD)
+    source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES})
+    source_group("3rd party Sources" ${CMAKE_CURRENT_SOURCE_DIR} FILES ${FONT_SOURCES} ${NANOVG_SOURCES} ${ATLAS_SOURCES})
+endif()
+
 # disable warnings because of 3rd party issue with anonymous struct
 disable_warnings(Canvas)
 target_compile_definitions(Canvas PRIVATE _CRT_SECURE_NO_WARNINGS)
