--- a/.github/jobs/uwp.yml
+++ b/.github/jobs/uwp.yml
@@ -40,7 +40,7 @@ jobs:
     - script: |
         mkdir build${{ variables.solutionName }}
         cd build${{ variables.solutionName }}
-        cmake .. -DCMAKE_SYSTEM_NAME=WindowsStore -DCMAKE_SYSTEM_VERSION=10.0 ${{ variables.jsEngineDefine }} -A ${{ parameters.platform }}
+        cmake .. -DCMAKE_SYSTEM_NAME=WindowsStore -DCMAKE_SYSTEM_VERSION=10.0 ${{ variables.jsEngineDefine }} -A ${{ parameters.platform }} -DCMAKE_UNITY_BUILD=${UNITY_BUILD}
       displayName: 'Generate ${{ variables.solutionName }} solution'
   
     - task: VSBuild@1
