--- a/Dependencies/CMakeLists.txt
+++ b/Dependencies/CMakeLists.txt
@@ -43,14 +43,18 @@ elseif(GRAPHICS_API STREQUAL "Vulkan")
     target_compile_definitions(bgfx PRIVATE BGFX_CONFIG_RENDERER_VULKAN=1)
 endif()
 set_property(TARGET astc PROPERTY FOLDER Dependencies/bgfx/3rdparty)
+set_property(TARGET astc PROPERTY UNITY_BUILD false)
 set_property(TARGET astc-codec PROPERTY FOLDER Dependencies/bgfx/3rdparty)
+set_property(TARGET astc-codec PROPERTY UNITY_BUILD false)
 set_property(TARGET edtaa3 PROPERTY FOLDER Dependencies/bgfx/3rdparty)
 set_property(TARGET etc1 PROPERTY FOLDER Dependencies/bgfx/3rdparty)
 set_property(TARGET etc2 PROPERTY FOLDER Dependencies/bgfx/3rdparty)
 set_property(TARGET iqa PROPERTY FOLDER Dependencies/bgfx/3rdparty)
 set_property(TARGET nvtt PROPERTY FOLDER Dependencies/bgfx/3rdparty)
+set_property(TARGET nvtt PROPERTY UNITY_BUILD false)
 set_property(TARGET pvrtc PROPERTY FOLDER Dependencies/bgfx/3rdparty)
 set_property(TARGET squish PROPERTY FOLDER Dependencies/bgfx/3rdparty)
+set_property(TARGET squish PROPERTY UNITY_BUILD false)
 if(TARGET tinyexr)
     set_property(TARGET tinyexr PROPERTY FOLDER Dependencies/bgfx/3rdparty)
 endif()
@@ -164,4 +168,6 @@ endif()
 if(NAPI_JAVASCRIPT_ENGINE STREQUAL "V8" AND ((WIN32 AND NOT (WINDOWS_STORE OR CMAKE_GENERATOR_PLATFORM_UPPER MATCHES "ARM.*")) OR ANDROID))
     add_subdirectory(v8inspector)
     set_property(TARGET v8inspector PROPERTY FOLDER Dependencies)
+    set_property(TARGET v8inspector PROPERTY UNITY_BUILD false)
+    set_property(TARGET llhttp PROPERTY UNITY_BUILD false)
 endif()
