--- a/Apps/Playground/Android/app/build.gradle
+++ b/Apps/Playground/Android/app/build.gradle
@@ -27,6 +27,10 @@ if (project.hasProperty("GRAPHICS_API")) {
     }
 }
 
+def unity_build = "false"
+if (project.hasProperty("UNITY_BUILD")) {
+    unity_build = project.property("UNITY_BUILD")
+}
 def arcore_libpath = "${buildDir}/arcore-native"
 
 configurations { natives }
@@ -48,7 +52,7 @@ android {
                     "-DANDROID_JSENGINE_LIBPATH=${jsEngineLibDir}",
                     "-DANDROID_JSENGINE_LIBNAME=${jsEngineLibName}",
                     "-DANDROID_JSENGINE_INCPATH=${jsEngineIncDir}",
-                    "-DCMAKE_UNITY_BUILD=true"
+                    "-DCMAKE_UNITY_BUILD=${unity_build}"
             }
         }
         ndk {
