--- a/Core/AppRuntime/CMakeLists.txt
+++ b/Core/AppRuntime/CMakeLists.txt
@@ -18,6 +18,10 @@ if(UNIX AND NOT APPLE AND NOT ANDROID)
     target_include_directories(AppRuntime INTERFACE "/usr/include/webkitgtk-4.0/")
 endif()
 
+if(APPLE)
+    set_property(TARGET AppRuntime PROPERTY UNITY_BUILD false)
+endif()
+
 target_link_to_dependencies(AppRuntime
     PRIVATE arcana
     PUBLIC JsRuntime)
