--- a/Dependencies/xr/CMakeLists.txt
+++ b/Dependencies/xr/CMakeLists.txt
@@ -36,6 +36,7 @@ else()
         "Source/OpenXR/SceneUnderstanding.cpp"
         "Source/OpenXR/XrInput.h"
         "Source/OpenXR/XrInput.cpp")
+    set_property(TARGET openxr_loader PROPERTY UNITY_BUILD false)
 endif()
 
 add_library(xr ${SOURCES})
@@ -47,6 +48,7 @@ if (APPLE)
     set_target_properties(xr PROPERTIES
         XCODE_ATTRIBUTE_CLANG_ENABLE_OBJC_ARC YES
     )
+    set_property(TARGET xr PROPERTY UNITY_BUILD false)
 endif()
 
 if (ANDROID)
