Implement ExternalTexture for metal

--- a/Plugins/ExternalTexture/CMakeLists.txt
+++ b/Plugins/ExternalTexture/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(SOURCES
     "Include/Babylon/Plugins/ExternalTexture.h"
-    "Source/ExternalTexture_${GRAPHICS_API}.cpp"
+    "Source/ExternalTexture_${GRAPHICS_API}.${BABYLON_NATIVE_PLATFORM_IMPL_EXT}"
     "Source/ExternalTexture_Shared.h")
 
 add_library(ExternalTexture ${SOURCES})
