--- a/.github/jobs/android.yml
+++ b/.github/jobs/android.yml
@@ -36,7 +36,7 @@ jobs:
       inputs:
           workingDirectory: 'Apps/Playground/Android'
           gradleWrapperFile: 'Apps/Playground/Android/gradlew'
-          gradleOptions: '-Xmx1536m'
+          gradleOptions: '-Xmx1536m -debug -info'
           options: '-PJSEngine=${{ parameters.JSEngine }} -PARM64Only -PNDK_VERSION=$(NDK_VERSION) -PUNITY_BUILD=${UNITY_BUILD}'
           publishJUnitResults: false
           tasks: 'assembleRelease'
@@ -46,7 +46,7 @@ jobs:
       inputs:
           workingDirectory: 'Apps/ValidationTests/Android'
           gradleWrapperFile: 'Apps/ValidationTests/Android/gradlew'
-          gradleOptions: '-Xmx1536m'
+          gradleOptions: '-Xmx1536m -debug -info'
           options: '-PJSEngine=${{ parameters.JSEngine }} -PARM64Only -PNDK_VERSION=$(NDK_VERSION) -PUNITY_BUILD=${UNITY_BUILD}'
           publishJUnitResults: false
           tasks: 'assembleRelease'
