cmake version in gradle

--- a/Apps/Playground/Android/app/build.gradle
+++ b/Apps/Playground/Android/app/build.gradle
@@ -44,6 +44,7 @@ android {
         targetSdkVersion 28
         externalNativeBuild {
             cmake {
+                version "3.18.1"
                 abiFilters "arm64-v8a", "armeabi-v7a", "x86", "x86_64"
                 arguments "-DANDROID_STL=c++_shared",
                     "-DENABLE_PCH=OFF",
