--- a/.github/jobs/android.yml
+++ b/.github/jobs/android.yml
@@ -34,6 +34,7 @@ jobs:
       
     - script: |
         ls /usr/local/lib/android/sdk/cmake
+        rm -rf /usr/local/lib/android/sdk/cmake/3.22.1
       displayName: 'Uninstall SDK cmake'
       
     - task: Gradle@2
