Update BJS for xr utility layer fix (#1113)
* Update BJS for xr utility layer fix

* - update bgfx with d3d12 fix
- update tests list

* debug build with 20.04 image

* 22.04 image test

* build options

* cmake version in gradle

* uninstall cmake

* test list dir

* remove cmake 3.22.1

* cmake hack for ubuntu

Co-authored-by: Cedric Guillemet <cedric.guillemet@gmail.com>

--- a/.github/jobs/android.yml
+++ b/.github/jobs/android.yml
@@ -31,7 +31,13 @@ jobs:
         cd ../../ValidationTests/Android
         npm install
       displayName: 'Install JS engine NPMs'
-
+      
+    - script: |
+        ls /usr/local/lib/android/sdk/cmake
+        rm -rf /usr/local/lib/android/sdk/cmake/3.22.1
+      condition: contains('${{ parameters.vmImage }}', 'ubuntu')
+      displayName: 'Uninstall SDK cmake'
+      
     - task: Gradle@2
       inputs:
           workingDirectory: 'Apps/Playground/Android'
