--- a/Apps/Playground/Android/app/build.gradle
+++ b/Apps/Playground/Android/app/build.gradle
@@ -80,7 +80,7 @@ android {
 
     externalNativeBuild {
         cmake {
-            version '3.19.0+'
+            version '3.19.6'
             path 'CMakeLists.txt'
         }
     }
