Use CMake `DEPLOYMENT_TARGET` variable to set iPhoneOS deployment target
There is a mismatch in the `XCODE_ATTRIBUTE_IPHONEOS_DEPLOYMENT_TARGET` CMake variables used for libraries and apps. Libraries set the deployment target using the `DEPLOYMENT_TARGET` CMake variable. Apps have the deployment target hard-coded to `9.0`, which causes build warnings when the `DEPLOYMENT_TARGET` CMake variable is not set to `9.0`.

This change avoids the build warnings by setting the deployment target to the `DEPLOYMENT_TARGET` CMake variable in the playground and validation test apps.

--- a/Apps/Playground/CMakeLists.txt
+++ b/Apps/Playground/CMakeLists.txt
@@ -142,7 +142,7 @@ if(APPLE)
             XCODE_ATTRIBUTE_CLANG_ENABLE_OBJC_ARC YES
             RESOURCE "${RESOURCE_FILES}"
 
-            XCODE_ATTRIBUTE_IPHONEOS_DEPLOYMENT_TARGET 9.0
+            XCODE_ATTRIBUTE_IPHONEOS_DEPLOYMENT_TARGET ${DEPLOYMENT_TARGET}
             XCODE_ATTRIBUTE_PRODUCT_BUNDLE_IDENTIFIER "com.BabylonNative.Playground.iOS"
 
             XCODE_ATTRIBUTE_SWIFT_VERSION "4.0"
