--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -14,26 +14,12 @@ jobs:
       uses: actions/checkout@master
       with:
         submodules: 'recursive'
-    - name: Download babylon.max.js
-      run: curl.exe -o Apps/node_modules/babylonjs/babylon.max.js --create-dirs https://preview.babylonjs.com/babylon.max.js
-    - name: Download babylon.max.js.map
-      run: curl.exe -o Apps/node_modules/babylonjs/babylon.max.js.map --create-dirs https://preview.babylonjs.com/babylon.max.js.map
-    - name: Download babylonjs.materials.js
-      run: curl.exe -o Apps/node_modules/babylonjs-materials/babylonjs.materials.js --create-dirs https://preview.babylonjs.com/materialsLibrary/babylonjs.materials.js
-    - name: Download babylonjs.materials.js.map
-      run: curl.exe -o Apps/node_modules/babylonjs-materials/babylonjs.materials.js.map --create-dirs https://preview.babylonjs.com/materialsLibrary/babylonjs.materials.js.map
-    - name: Download babylon.loaders.js
-      run: curl.exe -o Apps/node_modules/babylonjs-loaders/babylonjs.loaders.js --create-dirs https://preview.babylonjs.com/loaders/babylonjs.loaders.js
-    - name: Download babylon.loaders.js.map
-      run: curl.exe -o Apps/node_modules/babylonjs-loaders/babylonjs.loaders.js.map --create-dirs https://preview.babylonjs.com/loaders/babylonjs.loaders.js.map
-    - name: Download babylon.gui.js
-      run: curl.exe -o Apps/node_modules/babylonjs-gui/babylon.gui.js --create-dirs https://preview.babylonjs.com/gui/babylon.gui.js
-    - name: Download babylon.gui.js.map
-      run: curl.exe -o Apps/node_modules/babylonjs-gui/babylon.gui.js.map --create-dirs https://preview.babylonjs.com/gui/babylon.gui.js.map
-    - name: Download chai.js
-      run: curl.exe -o Apps/node_modules/chai/chai.js --create-dirs https://unpkg.com/chai/chai.js
-    - name: Download mocha.js
-      run: curl.exe -o Apps/node_modules/mocha/mocha.js --create-dirs https://unpkg.com/mocha/mocha.js
+    - name: NPM Install
+      run: npm install
+      working-directory: ./Apps
+    - name: NPM download nightly
+      run: npm run getNightly
+      working-directory: ./Apps
     - name: View Apps\node_modules content
       run: Get-ChildItem -Path .\Apps\node_modules -Recurse
     - name: Make Solution
