--- a/.github/jobs/win32.yml
+++ b/.github/jobs/win32.yml
@@ -41,6 +41,10 @@ jobs:
         displayName: 'Install Babylon.js NPM packages'
 
       - script: |
+          echo "VARIABLES TEST"
+          echo ${ variables.UNITY_BUILD }
+
+      - script: |
           mkdir build${{ variables.solutionName }}
           cd build${{ variables.solutionName }}
           cmake -G "Visual Studio 16 2019" -A ${{ parameters.platform }} ${{ variables.jsEngineDefine }} -DBGFX_CONFIG_MEMORY_TRACKING=ON -DBGFX_CONFIG_DEBUG=ON -DGRAPHICS_API=${{ parameters.graphics_api }} -DCMAKE_UNITY_BUILD=${variables.UNITY_BUILD} ..
