--- a/.github/jobs/android.yml
+++ b/.github/jobs/android.yml
@@ -47,7 +47,7 @@ jobs:
           workingDirectory: 'Apps/ValidationTests/Android'
           gradleWrapperFile: 'Apps/ValidationTests/Android/gradlew'
           gradleOptions: '-Xmx1536m'
-          options: '-PJSEngine=${{ parameters.JSEngine }} -PARM64Only -PNDK_VERSION=$(NDK_VERSION) -PUNITY_BUILD=${UNITY_BUILD}'
+          options: '-PJSEngine=${{ parameters.JSEngine }} -PARM64Only -PNDK_VERSION=$(NDK_VERSION) -PUNITY_BUILD=$(UNITY_BUILD)'
           publishJUnitResults: false
           tasks: 'assembleRelease'
       displayName: 'Build ValidationTests ${{ parameters.JSEngine }}'
