--- a/.github/jobs/macos.yml
+++ b/.github/jobs/macos.yml
@@ -32,7 +32,7 @@ jobs:
     - script: |
         mkdir buildmacOS
         cd buildmacOS
-        cmake .. -GXcode -DCMAKE_UNITY_BUILD=${UNITY_BUILD}
+        cmake .. -GXcode -DCMAKE_UNITY_BUILD=$(UNITY_BUILD)
       displayName: 'Generate macOS solution'
 
     - task: Xcode@5
