disable UB win32/NativeCamera

--- a/Plugins/NativeCamera/CMakeLists.txt
+++ b/Plugins/NativeCamera/CMakeLists.txt
@@ -29,6 +29,10 @@ elseif(APPLE)
     )
 endif()
 
+if(WIN32)
+    set_property(TARGET NativeEngine PROPERTY UNITY_BUILD false)
+endif()
+
 target_link_to_dependencies(NativeCamera
     PUBLIC JsRuntime
     PRIVATE GraphicsDeviceContext
