--- a/Plugins/NativeCamera/CMakeLists.txt
+++ b/Plugins/NativeCamera/CMakeLists.txt
@@ -8,14 +8,16 @@ set(SOURCES
     "Include/Babylon/Plugins/NativeCamera.h"
     "Source/CameraCapability.h"
     "Source/CameraCapability.cpp"
+    "Source/MediaDevices.h"
+    "Source/MediaDevices.cpp"
     "Source/MediaStream.h"
     "Source/MediaStream.cpp"
     "Source/NativeCamera.cpp"
     "Source/NativeVideo.cpp"
     "Source/NativeVideo.h"
-    "Source/NativeCameraImpl.h"
-    "Source/NativeCameraImplShared.h"
-    "Source/${PLATFORM}/NativeCameraImpl.${BABYLON_NATIVE_PLATFORM_IMPL_EXT}")
+    "Source/CameraDevice.h"
+    "Source/CameraDeviceSharedPImpl.h"
+    "Source/${PLATFORM}/CameraDevice.${BABYLON_NATIVE_PLATFORM_IMPL_EXT}")
 
 add_library(NativeCamera ${SOURCES})
 warnings_as_errors(NativeCamera)
