Add Constraints.cpp because Android builds fail with duplicate symbol definitions otherwise.

--- a/Plugins/NativeCamera/CMakeLists.txt
+++ b/Plugins/NativeCamera/CMakeLists.txt
@@ -9,6 +9,7 @@ set(SOURCES
     "Source/Capability.h"
     "Source/Capability.cpp"
     "Source/Constraint.h"
+    "Source/Constraint.cpp"
     "Source/MediaDevices.h"
     "Source/MediaDevices.cpp"
     "Source/MediaStream.h"
