Update to latest bgfx

--- a/Dependencies/CMakeLists.txt
+++ b/Dependencies/CMakeLists.txt
@@ -43,10 +43,8 @@ elseif(GRAPHICS_API STREQUAL "OpenGL")
 elseif(GRAPHICS_API STREQUAL "Vulkan")
     target_compile_definitions(bgfx PRIVATE BGFX_CONFIG_RENDERER_VULKAN=1)
 endif()
-set_property(TARGET astc PROPERTY FOLDER Dependencies/bgfx/3rdparty)
-set_property(TARGET astc PROPERTY UNITY_BUILD false)
-set_property(TARGET astc-codec PROPERTY FOLDER Dependencies/bgfx/3rdparty)
-set_property(TARGET astc-codec PROPERTY UNITY_BUILD false)
+set_property(TARGET astc-encoder PROPERTY FOLDER Dependencies/bgfx/3rdparty)
+set_property(TARGET astc-encoder PROPERTY UNITY_BUILD false)
 set_property(TARGET edtaa3 PROPERTY FOLDER Dependencies/bgfx/3rdparty)
 set_property(TARGET etc1 PROPERTY FOLDER Dependencies/bgfx/3rdparty)
 set_property(TARGET etc2 PROPERTY FOLDER Dependencies/bgfx/3rdparty)
@@ -62,8 +60,7 @@ endif()
 set_property(TARGET bgfx PROPERTY FOLDER Dependencies/bgfx)
 set_property(TARGET bimg PROPERTY FOLDER Dependencies/bgfx)
 set_property(TARGET bx PROPERTY FOLDER Dependencies/bgfx)
-disable_warnings(astc)
-disable_warnings(astc-codec)
+disable_warnings(astc-encoder)
 disable_warnings(edtaa3)
 disable_warnings(etc1)
 disable_warnings(etc2)
