--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -92,8 +92,8 @@ jobs:
     parameters:
       name: Ubuntu_Clang9_V8
       vmImage: 'ubuntu-latest'
-      CC: clang-10
-      CXX: clang++-10
+      CC: clang
+      CXX: clang++
       JSEngine: V8
 
   - template: .github/jobs/linux.yml
